@@ -1,3 +1,6 @@
+2004-07-01 Ian Rutt
+ * Added documentation comments to glide_messages.f90
+
 2004-06-30 Ian Rutt
  * Completed standardisation of message system - six levels are provided, from     'diagnostics' to 'fatal errors'. The overall message level can be set by        calling glide_set_msg_level. Two output subroutines are provided: glide_msg  
    and glide_stars; the latter prints a line of 70 stars across the screen.
